--- a/Frontend/BudgetTrackerUI/src/app/cc-dashboard/cc-dashboard.scss
+++ b/Frontend/BudgetTrackerUI/src/app/cc-dashboard/cc-dashboard.scss
@@ -6,8 +6,7 @@
 .page-container {
     display: flex;
     flex-direction: column;
-    height: calc(100vh - 48px - 60px);
-    gap: 10px;
+    gap: 20px;
 }
 
 .header-section {
@@ -26,9 +25,7 @@
 }
 
 .grid-section {
-    flex: 1;
     display: flex;
     flex-direction: column;
-    min-height: 0;
-    overflow-y: auto; // CC Dashboard is very long, it needs internal scroll
+    gap: 20px;
 }
