--- a/Frontend/BudgetTrackerUI/src/app/cc-input/cc-input.scss
+++ b/Frontend/BudgetTrackerUI/src/app/cc-input/cc-input.scss
@@ -1,13 +1,14 @@
 :host {
-    display: block;
-    height: 100%;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    min-height: 0;
 }
 
 .page-container {
   display: flex;
   flex-direction: column;
-  height: calc(100vh - 48px - 60px); // Toolbar - Padding
-  gap: 10px;
+  height: calc(100vh - 48px - 60px);
 }
 
 .header-section {
@@ -18,9 +19,9 @@
     margin-bottom: 20px;
   }
 
-  .button-bar {
+  .button-content {
     display: flex;
-    gap: 15px;
+    gap: 10px;
     margin-bottom: 20px;
     align-items: center;
   }
@@ -31,6 +32,7 @@
   display: flex;
   flex-direction: column;
   min-height: 0;
+  padding: 0;
 
   ag-grid-angular {
     flex: 1;
